// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Level 1 1`] = `
<div>
  <h1
    class="font-bold text-2xl lg:text-[32px]"
  />
</div>
`;

exports[`Heading Level 2 1`] = `
<div>
  <h2
    class="font-bold text-xl lg:text-[28px]"
  />
</div>
`;

exports[`Heading Level 3 1`] = `
<div>
  <h3
    class="font-bold text-lg lg:text-2xl"
  />
</div>
`;

exports[`Heading Level 4 1`] = `
<div>
  <h4
    class="font-bold text-base lg:text-lg"
  />
</div>
`;

exports[`Heading Level 5 1`] = `
<div>
  <h5
    class="font-bold text-sm lg:text-base"
  />
</div>
`;

exports[`Heading Level 6 1`] = `
<div>
  <h6
    class="font-bold text-xs lg:text-sm"
  />
</div>
`;

exports[`Heading Passing Cildren 1`] = `
<div>
  <h1
    class="font-bold text-2xl lg:text-[32px]"
  >
    Testing
  </h1>
</div>
`;

exports[`Heading Passing className 1`] = `
<div>
  <h1
    class="font-bold text-2xl lg:text-[32px] bg-red-400"
  />
</div>
`;
